[package]
name = "readymetronome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
cpal = "0.15.2"
crossterm = "0.27.0"
ratatui = "0.24.0"
rodio = "0.17.3"
spin_sleep = "1.1.1"
