[package]
name = "readymetronome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "1.1.0"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
cpal = "0.15.3"
crossterm = "0.27.0"
ratatui = "0.24.0"
rodio = "0.20.1"
spin_sleep = "1.2.1"
